refreshing swagger class

--- a/RecipeForum_frontend/RecipeForum_frontend/Pages/Home.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Pages/Home.razor
@@ -70,8 +70,8 @@
 
     private async Task OpenAddRecipeDialog()
     {
-        var materials = await SwaggerClient._1Async();
-        var categories = await SwaggerClient._2Async();
+        var materials = await SwaggerClient.GetAllMaterialsAsync();
+        var categories = await SwaggerClient.GetAllCategoriesAsync();
         var parameters = new DialogParameters()
         {
             ["Materials"] = materials.ToList(),
